Fix link wrapping in footnotes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -302,6 +302,7 @@ p {
       & a {
         display: inline;
         margin: 0;
+        overflow-wrap: break-word;
         padding: 0 0.2rem 0.1rem 0.2rem;
         vertical-align: middle;
       }
